--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
       <img src="qr.png" alt="QR Code" class="qr-code">
     </div>
 
-    <h1>Toh Toh</h1>
+    <h1>Tony Toh</h1>
     <p class="title">Assistant Boutique Manager<br>Sincere Watch Limited</p>
 
     <a class="button" href="TonyToh.vcf" download>Download Contact</a>
